--- a/arch/arm64/configs/leo_user_defconfig
+++ b/arch/arm64/configs/leo_user_defconfig
@@ -3482,6 +3482,20 @@ CONFIG_NET_VENDOR_SILICOM=y
 # CONFIG_DGRP is not set
 
 #
+# Qualcomm Atheros CLD WLAN module
+#
+CONFIG_QCA_CLD_WLAN=m
+CONFIG_QCACLD_WLAN_LFR3=y
+CONFIG_PRIMA_WLAN_OKC=y
+CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
+CONFIG_WLAN_FEATURE_11W=y
+CONFIG_WLAN_FEATURE_LPSS=y
+CONFIG_QCOM_VOWIFI_11R=y
+CONFIG_WLAN_FEATURE_NAN=y
+CONFIG_QCOM_TDLS=y
+CONFIG_QCOM_LTE_COEX=y
+
+#
 # Qualcomm MSM specific device drivers
 #
 # CONFIG_MSM_SSBI is not set
