--- a/arch/arm64/configs/leo_user_defconfig
+++ b/arch/arm64/configs/leo_user_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.10.49 Kernel Configuration
+# Linux/arm64 3.10.84 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -35,7 +35,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=""
+CONFIG_LOCALVERSION="-guaios"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -100,7 +100,7 @@ CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
-# CONFIG_CPUSETS is not set
+#CONFIG_CPUSETS=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
 # CONFIG_MEMCG is not set
@@ -211,15 +211,7 @@ CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 # CONFIG_MODULE_SRCVERSION_ALL is not set
-CONFIG_MODULE_SIG=y
-CONFIG_MODULE_SIG_FORCE=y
-CONFIG_MODULE_SIG_ALL=y
-CONFIG_MODULE_SIG_SHA1=y
-# CONFIG_MODULE_SIG_SHA224 is not set
-# CONFIG_MODULE_SIG_SHA256 is not set
-# CONFIG_MODULE_SIG_SHA384 is not set
-# CONFIG_MODULE_SIG_SHA512 is not set
-CONFIG_MODULE_SIG_HASH="sha1"
+# CONFIG_MODULE_SIG is not set
 CONFIG_STOP_MACHINE=y
 CONFIG_BLOCK=y
 CONFIG_BLK_DEV_BSG=y
@@ -1457,7 +1449,9 @@ CONFIG_WLAN=y
 # CONFIG_LIBRA_SDIOIF is not set
 # CONFIG_ATH6K_LEGACY_EXT is not set
 # CONFIG_WCNSS_CORE is not set
-CONFIG_CNSS=y
+# CONFIG_CNSS is not set
+CONFIG_CNSS_PCI=y
+CONFIG_CNSS_MAC_BUG=y
 # CONFIG_CNSS_SECURE_FW is not set
 CONFIG_BUS_AUTO_SUSPEND=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
@@ -3490,10 +3484,12 @@ CONFIG_PRIMA_WLAN_OKC=y
 CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
 CONFIG_WLAN_FEATURE_11W=y
 CONFIG_WLAN_FEATURE_LPSS=y
+CONFIG_QCA_WIFI_AUTOMOTIVE_CONC=y
 CONFIG_QCOM_VOWIFI_11R=y
 CONFIG_WLAN_FEATURE_NAN=y
 CONFIG_QCOM_TDLS=y
 CONFIG_QCOM_LTE_COEX=y
+CONFIG_WLAN_OFFLOAD_PACKETS=y
 
 #
 # Qualcomm MSM specific device drivers
@@ -3775,6 +3771,8 @@ CONFIG_MSM_SYSTEM_HEALTH_MONITOR=y
 CONFIG_QCOM_EARLY_RANDOM=y
 # CONFIG_MSM_PACMAN is not set
 CONFIG_MSM_CORE_CTL_HELPER=y
+CONFIG_MSM_CORE_CTL=y
+CONFIG_UID_CPUTIME=y
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_QCOM_NPA_DUMP=y
 CONFIG_KERNEL_TEXT_MPU_PROT=y
