leo: update config

--- a/arch/arm64/configs/leo_user_defconfig
+++ b/arch/arm64/configs/leo_user_defconfig
@@ -186,6 +186,8 @@ CONFIG_HAVE_PERF_REGS=y
 CONFIG_HAVE_PERF_USER_STACK_DUMP=y
 CONFIG_HAVE_ARCH_JUMP_LABEL=y
 CONFIG_ARCH_WANT_COMPAT_IPC_PARSE_VERSION=y
+CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
+CONFIG_SECCOMP_FILTER=y
 CONFIG_HAVE_CC_STACKPROTECTOR=y
 CONFIG_CC_STACKPROTECTOR=y
 # CONFIG_CC_STACKPROTECTOR_NONE is not set
@@ -3462,7 +3464,6 @@ CONFIG_LARGE_LOGCAT_SIZE=2048
 CONFIG_ANDROID_TIMED_OUTPUT=y
 # CONFIG_ANDROID_TIMED_GPIO is not set
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-CONFIG_ANDROID_WHETSTONE=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_SYNC=y
@@ -3757,7 +3758,7 @@ CONFIG_MSM_MEMORY_DUMP_V2=y
 # CONFIG_MSM_DDR_HEALTH is not set
 CONFIG_MSM_COMMON_LOG=y
 CONFIG_MSM_WATCHDOG_V2=y
-CONFIG_MSM_FORCE_WDOG_BITE_ON_PANIC=y
+# CONFIG_MSM_FORCE_WDOG_BITE_ON_PANIC is not set
 CONFIG_MSM_HVC=y
 # CONFIG_MSM_HYP_DEBUG is not set
 CONFIG_MSM_SUBSYSTEM_RESTART=y
@@ -3785,7 +3786,7 @@ CONFIG_MSM_CORE_CTL=y
 CONFIG_UID_CPUTIME=y
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_QCOM_NPA_DUMP=y
-CONFIG_KERNEL_TEXT_MPU_PROT=y
+CONFIG_SERIAL_NUM=y
 # CONFIG_MEM_SHARE_QMI_SERVICE is not set
 
 #
